// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectObjectives renders correctly when both objectives and caveats have length is > 850 characters and are in multiple paragraphs 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <span>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 Donec
    </span>
    <span>
      …
    </span>
  </p>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
      style="color: rgb(117, 117, 117); font-weight: 600; text-transform: uppercase;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <svg
          role="presentation"
          style="width: 1.5rem; height: 1.5rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
            style="fill: currentColor;"
          />
        </svg>
        <span>
          Read More
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ProjectObjectives renders correctly when objectives and caveats are < 850 characters and in multiple paragraphs 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    Paragraph1
Paragraph2

Paragraph3
  </p>
</DocumentFragment>
`;

exports[`ProjectObjectives renders correctly when objectives length is <= 850 characters 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    Et ad et in culpa si
  </p>
</DocumentFragment>
`;

exports[`ProjectObjectives renders correctly when objectives length is > 850 characters and caveats is empty 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <span>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 Donec
    </span>
    <span>
      …
    </span>
  </p>
  <div
    class="MuiBox-root MuiBox-root-1"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
      style="color: rgb(117, 117, 117); font-weight: 600; text-transform: uppercase;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <svg
          role="presentation"
          style="width: 1.5rem; height: 1.5rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
            style="fill: currentColor;"
          />
        </svg>
        <span>
          Read More
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
